# opencl

./: .~lock.dados.ods#  clinfo.txt  dados.ods  dados.xlsx  gprof.txt  localSize.csv  v4-test1-localsize.txt
add-c/: opencl-app-add.c  opencl-app-add.x
add-c-mod/: opencl-app-add-kernel.cl
basic-python/: main.py
bkp-reg-v1/: .cproject  kernel.cl  my_semblance.h  reg.c
bkp-sintax-reg-v1/: bkp_kernel.cl  kernel.cl  kernel2.cl  my_semblance.c  my_semblance.h  reg.c
integrate-python/: integrate.cl  main.py
matrix-mul-c/: opencl-mmul-app.c  opencl-mmul-kernel.c
matrix-mul-cpp/: host.cpp  host.x
matrix-mul-python/: matrix-mul-py.py  mmul-kernel1.c  mmul-kernel2.c  mmul-kernel3.c  mmul-kernel4.c
reg-opencl-mysu/: .cproject  .project  README  kernel.cl  my_semblance.c  my_semblance.h  reg.c  semblance.c
reg-opencl-v1/: .project  kernel.cl  my_semblance.c  my_semblance_kernel.h  reg.c  test-reg.sh
reg-opencl-v2/: .cproject  .project  README  kernel.cl  reg.c  semblance.h  test-reg.sh
reg-opencl-v3/: .project  kernel.cl  my_semblance.c  my_semblance.h  my_semblance_kernel.h  reg.c  test-reg.sh
reg-opencl-v4/: CMakeLists-2.txt  CMakeLists.txt  Makefile  README  expected.out  kernel0.cl  kernel1.cl  my_semblance.h  reg.c  result.txt  test-reg.sh  variacao-localsize.txt
reg-opencl-v4/Debug/my_semblance_options/: subdir.mk
reg-opencl-v4/my_semblance_options/: my_semblance_sem_ponteiro.c
reg-opencl-vx/: .project  README  kernel.cl
reg-original-dados-transf/: .project  README  my_semblance.c  my_semblance.h  reg.c
reg-original-mysu/: my_semblance.c  (+4 more)
(+31 files in other folders)
